Added Lists page

--- a/views/createShelf.hbs
+++ b/views/createShelf.hbs
@@ -4,8 +4,8 @@
   <label for="name">Regalname:</label>
   <input type="text" id="name" name="name" required>
 
-  <label for="location">Standort:</label>
-  <input type="text" id="location" name="location" required>
+  <label for="decription">Beschreibung:</label>
+  <input type="text" id="description" name="description" required>
 
   <button type="submit">Erstellen</button>
 </form>
