--- a/views/lists.hbs
+++ b/views/lists.hbs
@@ -7,4 +7,6 @@
   {{/each}}
 </ul>
 
+<li><a href="/shelf/read">Gelesene Bücher</a></li>
+
 <p><a href="/shelf/create">➕ Neues Regal erstellen</a></p>
